--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,12 @@
   width: 60%;
 }
 .crousel .content h6 {
+  font-size: calc(9px + 1vw);
   word-spacing: 5px;
   letter-spacing: 5px;
 }
 .crousel .content h1 {
-  font-size: 2.7rem;
+  font-size: calc(30px + 0.8vw);
   letter-spacing: 1px;
   line-height: 60px;
 }
@@ -106,10 +107,16 @@
   }
 }
 /* about us  */
+.about {
+  margin-top : 100px;
+}
 .about .h-box {
   display: inline-block;
   position: relative;
   left: 50%;
+}
+.about .h-box .heading{
+  font-size: calc(18px + 1vw);
 }
 .underline {
   width: 70%;
@@ -135,6 +142,9 @@
   display: none;
 }
 @media(max-width:800px){
+  .about {
+    margin-top :40px;
+  }
   .about .content .left {
     display: none;
   }
@@ -150,8 +160,14 @@
   }
 }
 /*  our service  */
+.our-services{
+  margin-top: 100px;
+}
 .h-box {
   display: inline-block;
+}
+.h-box .heading{
+  font-size: calc(20px + 0.8vw);
 }
 .our-services .main-box {
   display: grid;
@@ -211,6 +227,9 @@
   word-spacing: 2px;
 }
 @media(max-width:800px){
+  .our-services{
+    margin-top: 10px;
+  }
   .our-idea{
     flex-direction: column;
   }
@@ -222,6 +241,14 @@
   }
 }
 /* our member  */
+.our-member {
+ margin-top: 100px;
+}
+@media(max-width:800px){
+  .our-member {
+    margin-top: 50px;
+   }
+}
 .our-member .main-box{
   display: grid;
   grid-template-columns: repeat(auto-fill , minmax(250px,1fr));
